# final-project

./: .gitignore  .gitmodules  readme.md
artifacts/: diode.uf2  eurosat.keras  eurosat.tflite  pico-inference-results.csv
notebooks/: 1.exploring-dataset.ipynb  2.establishing-baseline.ipynb  3.exploring-models.ipynb  4.powerful-small-model.ipynb  5.tflite-model-for-pico.ipynb  6.evaluation-and-pico-results.ipynb  7.transfer-learning-models.ipynb  8.sota-models.ipynb  core.py
notebooks-html/: 1.exploring-dataset.html  2.establishing-baseline.html  3.exploring-models.html  4.powerful-small-model.html  5.tflite-model-for-pico.html  6.evaluation-and-pico-results.html  7.transfer-learning-models.html  8.sota-models.html
pico/: CMakeLists.txt  eurosat.h  main.cpp
scripts/: infer_on_pico.py  init_datasets.sh  prep_images_for_pico.py  split_dataset.py
